<resources>
    <string name="app_name">UsingBottomSheets</string>

    <string name="sheet_p1">Persistent Sheet P1</string>
    <string name="button1">Expand Sheet P1</string>
    <string name="collapse_button1">Collapse Sheet P1</string>

    <string name="sheet_p2">Persistent Sheet P2</string>
    <string name="button2">Expand Sheet P2</string>
    <string name="button2_hide">Hide Sheet P2</string>
    <string name="button2_peek">Peek Sheet P2</string>

    <string name="sheet_m1">Modal Sheet M1</string>
    <string name="button3">Expand Sheet M1</string>
    <string name="long_latin">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
